# drawstuff-modern

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  drawstuffCompat.cpp  drawstuffCompat.hpp  drawstuff_core.cpp  drawstuff_core.hpp
.github/workflows/: ci.yml
demo/: CMakeLists.txt  demo_100k_objects.cpp  demo_minimal.cpp  demo_show_obj.cpp  demo_spheres_100k.cpp  hud_fps.hpp
docs/: design-notes.md
include/: drawstuffCompat.hpp  drawstuff_core.hpp
include/drawstuff/: drawstuff.h
include/glad/: glad.h
src/: drawstuffCompat.cpp  drawstuff_core.cpp  mesh_utils.cpp  mesh_utils.hpp  platform_x11_glx.cpp  primitive_meshes.cpp  shader_programs.cpp
textures/: NOTICE
